[gd_scene load_steps=6 format=2]

[ext_resource path="res://GraphNetwork/CommodityConverter.gd" type="Script" id=1]
[ext_resource path="res://Textures/clockFill.png" type="Texture" id=2]
[ext_resource path="res://Textures/clockBack.png" type="Texture" id=3]
[ext_resource path="res://Textures/clockOver.png" type="Texture" id=4]
[ext_resource path="res://Production/Commodities/CommoditiesCash.tscn" type="PackedScene" id=5]

[node name="CommodityConverter" type="MarginContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 0, 25 )
size_flags_horizontal = 3
size_flags_vertical = 0
script = ExtResource( 1 )
requirements1 = ExtResource( 5 )

[node name="VBox" type="VBoxContainer" parent="."]
margin_right = 1024.0
margin_bottom = 600.0

[node name="ProductionTimer" type="Timer" parent="VBox"]
one_shot = true

[node name="RestTimer" type="Timer" parent="VBox"]
wait_time = 3.0
one_shot = true

[node name="HBoxContainer" type="HBoxContainer" parent="VBox"]
margin_right = 1024.0
margin_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="BufferValue" type="TextEdit" parent="VBox/HBoxContainer"]
margin_left = 465.0
margin_right = 495.0
margin_bottom = 30.0
rect_min_size = Vector2( 30, 30 )
size_flags_horizontal = 10
size_flags_vertical = 2
text = "3"

[node name="ConversionDesc" type="Label" parent="VBox/HBoxContainer"]
margin_left = 691.0
margin_top = 293.0
margin_right = 803.0
margin_bottom = 307.0
size_flags_horizontal = 6
size_flags_vertical = 6
text = "CommodityName"
valign = 1

[node name="ProductionProgress" type="TextureProgress" parent="VBox/HBoxContainer"]
margin_left = 999.0
margin_right = 1024.0
margin_bottom = 25.0
rect_min_size = Vector2( 25, 25 )
size_flags_vertical = 0
max_value = 1.0
step = 0.083
texture_under = ExtResource( 3 )
texture_over = ExtResource( 4 )
texture_progress = ExtResource( 2 )
fill_mode = 4
nine_patch_stretch = true

[connection signal="timeout" from="VBox/ProductionTimer" to="." method="_on_ProductionTimer_timeout"]
[connection signal="timeout" from="VBox/RestTimer" to="." method="_on_RestTimer_timeout"]
